@startuml

title __COMMENTS's Class Diagram__\n

  namespace com.example.our_planner {
    namespace ui.calendar {
      namespace comments {
        class com.example.our_planner.ui.calendar.comments.AdapterComments {
            ~ comments : ArrayList<Comment>
            + AdapterComments()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.calendar {
      namespace comments {
        class com.example.our_planner.ui.calendar.comments.AdapterComments.ViewHolderComments {
            - date : TextView
            - message : TextView
            - user : TextView
            + ViewHolderComments()
            + setData()
        }
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.calendar {
      namespace comments {
        class com.example.our_planner.ui.calendar.comments.CommentsActivity {
            ~ message : EditText
            ~ recyclerViewComments : RecyclerView
            ~ sendBtn : FloatingActionButton
            # onCreate()
        }
      }
    }
  }
  

  namespace com.example.our_planner {
    namespace ui.calendar {
      namespace comments {
        class com.example.our_planner.ui.calendar.comments.CommentsViewModel {
            ~ comments : MutableLiveData<ArrayList<Comment>>
            + CommentsViewModel()
            + addComment()
            + getComments()
        }
      }
    }
  }
  

  com.example.our_planner.ui.calendar.comments.AdapterComments -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.our_planner.ui.calendar.comments.AdapterComments +-down- com.example.our_planner.ui.calendar.comments.AdapterComments.ViewHolderComments
  com.example.our_planner.ui.calendar.comments.AdapterComments.ViewHolderComments -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.our_planner.ui.calendar.comments.CommentsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.our_planner.ui.calendar.comments.CommentsViewModel .up.|> com.example.our_planner.DataBaseAdapter.CommentInterface
  com.example.our_planner.ui.calendar.comments.CommentsViewModel -up-|> androidx.lifecycle.AndroidViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
